basic version ready

--- a/index.html
+++ b/index.html
@@ -1,1 +1,114 @@
-Hello World
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+    <title>Pranav Kumar</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <div id="page-wrap">
+      <!-- <img src="images/cthulu.png" alt="Photo of Cthulu" id="pic" /> -->
+
+      <div id="contact-info" class="vcard">
+        <!-- Microformats! -->
+
+        <h1 class="fn">Pranav Kumar</h1>
+
+        <p>
+          Email:
+          <a class="email" href="mailto:pranavstark79@gmail.com"
+            >pranavstark79@gmail.com</a
+          >
+        </p>
+      </div>
+
+      <div id="objective">
+        <p>
+          Experienced Full Stack developer with 4+ years in industry and
+          high-level proficiency in following technologies: JavaScript, ReactJS,
+          NodeJS, MongoDB & AWS. I have a very good working experience with
+          Application Architecture and worked on number of successful enterprise
+          applications.
+        </p>
+      </div>
+
+      <div class="clear"></div>
+
+      <dl>
+        <dd class="clear"></dd>
+
+        <dt>Experience</dt>
+        <dd>
+          <h2>
+            Software developer
+
+            <span
+              ><a target="__blank" href="//vujade.co"> Vuja De Design</a> - B-7,
+              Sector-1, Noida - 201301</span
+            >
+            <br />
+          </h2>
+          <p>Nov 2015 - Present</p>
+          <ul>
+            <li>
+              Worked on development of
+              <a target="__blank" href="//pellustro.com">Pellustro</a>, which is
+              built on MEAN stack. It has ability to conduct large scale
+              assessments to measure adherence and maturity against policies,
+              standards and principles.
+            </li>
+            <li>
+              My responsibilities for Pellustro includes writing clean, reusable
+              code for both frontend & backend.
+            </li>
+            <li>
+              Recently, I am much involved in upgrading & building cloud
+              infrastructure for Pellustro. My work include designing PCI-DSS
+              compliant aws cloud infrastructure using cloud formation.
+              Automating build & deployment process for application.
+            </li>
+          </ul>
+        </dd>
+
+        <dd class="clear"></dd>
+
+        <dt>Education</dt>
+        <dd>
+          <h2>Beant College of Engineering & Technology</h2>
+          <p>
+            <strong>B.Tech: </strong>Electronics & Communication (2011-2015)
+          </p>
+        </dd>
+
+        <dd class="clear"></dd>
+
+        <dt>Skills</dt>
+        <dd>
+          <h2>Software developer skills</h2>
+          <p>
+            Javascript, AngularJS(1.x), ReactJS, Node.JS, MongoDB, Express.JS,
+            Git
+          </p>
+
+          <h2>DevOps Skills</h2>
+          <p>
+            AWS Cloud formation, AWS CLI, AWS VPC, AWS EC2, LightSAIL, Nginx,
+            Jenkins
+          </p>
+        </dd>
+
+        <dd class="clear"></dd>
+
+        <dt>Website</dt>
+        <dd><a href="//nixgyd.com">https://nixgyd.com</a></dd>
+
+        <dd class="clear"></dd>
+      </dl>
+
+      <div class="clear"></div>
+    </div>
+  </body>
+</html>
