Updated on 18 JAN

--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
         <dt>Experience</dt>
         <dd>
           <h2>
+            Backend Developer
+
+            <span
+              ><a target="__blank" href="//steadyrabbit.in/"> Steady Rabbit Tech Pvt Ltd</a>
+               - Sector-62, Noida - 201301</span>
+            <br />
+          </h2>
+          <p>Feb 2020 - Present</p>
+          <ul>
+            <li>
+              Worked on development of Ecommerce app for which order count
+              reaches to 1000 per day.
+            </li>
+            <li>
+              I was responsible for understanding new business requirement.
+              Writing required APIs and bug fixing for backend functionality.
+              I was also responsible for managing AWS infrastructure for this app.
+            </li>
+            <li>
+              Currently working on writing Node.JS server for a US based food delivery app.
+            </li>
+          </ul>
+        </dd>
+
+        <dd class="clear"></dd>
+
+        <dt>Experience</dt>
+        <dd>
+          <h2>
             Software developer
 
             <span
@@ -51,7 +80,7 @@
             >
             <br />
           </h2>
-          <p>Nov 2015 - Present</p>
+          <p>Nov 2015 - Feb 2020</p>
           <ul>
             <li>
               Worked on development of
