--- a/index.html
+++ b/index.html
@@ -41,6 +41,23 @@
         <dd class="clear"></dd>
 
         <dt>Experience</dt>
+
+        <dd>
+            <h2>
+              Consultant Development
+  
+              <span
+                ><a target="__blank" href="//infogain.com/">Infogain</a>
+                 - Sector-62, Noida - 201301</span>
+              <br />
+            </h2>
+            <p>March 2021 - Present</p>
+              
+          </dd>
+  
+
+        <dd class="clear"></dd>
+
         <dd>
           <h2>
             Backend Developer
@@ -50,7 +67,7 @@
                - Sector-62, Noida - 201301</span>
             <br />
           </h2>
-          <p>Feb 2020 - Present</p>
+          <p>Feb 2020 - March 2021</p>
           <ul>
             <li>
               Worked on development of Ecommerce app for which order count
